syntax = "proto2";

message StoreInfo {
//	required string database_name = 1;
	required string store_name = 2;
}

message Operation {
	repeated StoreInfo store_info = 1;
}